
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int assert (int ) ;
 int index_entries ;

int index_check_metafiles (int left_len, const int *left, int right_len, const int *right) {
  if (!index_entries) {
    return 0;
  }
  assert (0);
  return 0;
}
